# ExploringPhysicsWithCpp

./: .gitignore  README.md
Code/: CMakeLists.txt
Code/Chapter_01_basic_objects/: demo_baseutils.cpp  demo_functions.cpp  demo_geometry_3d.cpp  demo_matrix.cpp  demo_real_function.cpp  demo_vector.cpp  demo_vectorn.cpp  main_chapter_01.cpp
Code/Chapter_01_basic_objects/mml/base/: Geometry.h
Code/Chapter_02_basic_algorithms/: demo_derivation.cpp  demo_interpolation.cpp  demo_lin_alg_sys_solvers.cpp  demo_root_finding.cpp  main_chapter_02.cpp
Code/Chapter_02_basic_algorithms/mml/base/: Geometry2D.h  Vector.h
Code/Chapter_02_basic_algorithms/mml/core/: Derivation.h
Code/Chapter_02_vizualization/: example2_wpf_visualizators.cpp  main_chapter_02.cpp
Code/Chapter_03_basic_algorithms/: demo_integration.cpp  demo_interpolation.cpp  demo_lin_alg_sys_solvers.cpp  demo_root_finding.cpp
Code/Chapter_04_collision_simulator/: collision_simulator_2d.cpp  collision_simulator_3d.cpp  main_chapter_04.cpp
Code/Chapter_04_collision_simulator/mml/: MMLBase.h
Code/Chapter_04_collision_simulator/mml/algorithms/: RootFinding.h
Code/Chapter_04_collision_simulator/mml/base/: BaseUtils.h  Function.h  Geometry3D.h  InterpolatedFunction.h  Matrix.h  VectorTypes.h
Code/Chapter_04_collision_simulator/mml/interfaces/: IFunction.h
Code/Chapter_05_pendelum/mml/algorithms/: ODESystemSolver.h
Code/Chapter_05_pendelum/mml/base/: Function.h  IFunction.h  VectorTypes.h
Code/Chapter_05_pendelum/mml/core/: LinAlgEqSolvers.h  ODESystem.h
Code/Chapter_05_pendulum/: main_chapter_05.cpp
Code/Chapter_05_pendulum/mml/algorithms/: ODESystemSolver.h  ODESystemStepCalculators.h  ODESystemSteppers.h
Code/Chapter_05_pendulum/mml/core/: Integration.h  ODESystemSolution.h
Code/Chapter_05_pendulum/mml/interfaces/: IODESystem.h  IODESystemStepCalculator.h
Code/Chapter_05_pendulum/mml/tools/: ConsolePrinter.h  Serializer.h  Visualizer.h
Code/Chapter_05_throwing_thing_in_the_air/: main_chapter_05.cpp
Code/Chapter_06_double_and_spherical_pendulum/: demo_pendulum_double.cpp  demo_pendulum_spherical.cpp  main_chapter_06.cpp
Code/Chapter_06_double_and_spherical_pendulum/mml/: MMLBase.h
Code/Chapter_06_double_and_spherical_pendulum/mml/base/: BaseUtils.h  VectorTypes.h
Code/Chapter_06_pendulum/: main_chapter_06.cpp
Code/Chapter_07_double_and_spherical_pendulum/: main_chapter_07.cpp
Code/Chapter_08_gravity/: main_chapter_08.cpp
Code/Chapter_08_gravity/mml/: MMLExceptions.h
Code/Chapter_09_gravity_N_body_problem/: main_chapter_09.cpp
Code/Chapter_09_gravity_N_body_problem/mml/base/: Tensor.h
Code/Chapter_09_gravity_N_body_problem/mml/core/: LinAlgEqSolvers.h
Code/Chapter_09_gravity_N_body_problem/mml/interfaces/: ITensorField.h
Code/Chapter_10_coordinate_transformations/mml/base/: Vector.h
Code/Chapter_10_coordinate_transformations/mml/interfaces/: IFunction.h
Code/Chapter_13_rigid_body/: main_chapter_13.cpp
Code/Chapter_13_rigid_body/mml/: MMLExceptions.h
Code/Chapter_13_rigid_body/mml/algorithms/: ODESystemSteppers.h
Code/Chapter_13_rigid_body/mml/base/: Vector.h
Code/Chapter_13_rigid_body/mml/core/CoordTransf/: CoordTransf2D.h  CoordTransfCylindrical.h  CoordTransfLorentz.h
Code/Chapter_17_static_electric_fields/mml/base/: Geometry.h  Geometry3D.h
Code/Chapter_18_static_magnetic_fields/: main_chapter_18.cpp
Code/Chapter_18_static_magnetic_fields/mml/algorithms/: ODESystemSolver.h
Code/Chapter_18_static_magnetic_fields/mml/base/: Geometry2D.h
Code/Chapter_18_static_magnetic_fields/mml/core/: ODESystem.h
Code/Chapter_18_static_magnetic_fields/mml/tools/: Serializer.h
Code/Chapter_19_dynamic_EM_fields/mml/base/: Matrix.h
Code/Chapter_19_dynamic_EM_fields/mml/interfaces/: ITensor.h
Code/mml/: MMLBase.h  MMLExceptions.h
Code/mml/algorithms/: FunctionsAnalyzer.h  ODESystemSolver.h  ODESystemStepCalculators.h  ODESystemSteppers.h  ParametricCurveAnalyzer.h  RootFinding.h  Statistics.h
Code/mml/base/: BaseUtils.h  CurvesSurfaces.h  DiracDeltaFunction.h  Function.h  Geometry.h  Geometry2D.h  Geometry3D.h  InterpolatedFunction.h  Intervals.h  Matrix.h  Matrix3D.h  MatrixNM.h  MatrixSym.h  MatrixTriDiag.h  ODESystem.h  ODESystemSolution.h  Polynom.h  StandardFunctions.h  Tensor.h  Vector.h  VectorN.h  VectorTypes.h
Code/mml/core/: CoordSystem.h  CoordTransf.h  Curves.h  Derivation.h  FieldOperations.h  FunctionHelpers.h  Integration.h  LinAlgEqSolvers.h  MatrixUtils.h  MetricTensor.h  ODESystemSolution.h  Surfaces.h
Code/mml/core/CoordTransf/: CoordTransf3D.h  CoordTransfLorentz.h  CoordTransfSpherical.h
Code/mml/core/Derivation/: DerivationBase.h  DerivationParametricCurve.h  DerivationRealFunction.h  DerivationScalarFunction.h  DerivationTensorField.h  DerivationVectorFunction.h  Jacobians.h
Code/mml/core/Integration/: Integration1D.h  Integration2D.h  Integration3D.h  IntegrationImproper.h  PathIntegration.h  SurfaceIntegration.h  VolumeIntegration.h
Code/mml/interfaces/: ICoordTransf.h  IInterval.h  IODESystem.h  IODESystemStepCalculator.h  IODESystemStepper.h  ITensorField.h
Code/mml/tools/: ConsolePrinter.h  Serializer.h  ThreadPool.h  Timer.h  Visualizer.h
Code/mpl/: MPLBase.h
Code/mpl/Base/: Elements.h
Code/mpl/CollisionSimulator2D/: CollisionSimulator2D.h  CollisionSimulator2DBase.h  ContainerFactory2D.h  SimResultsCollSim2D.h
Code/mpl/CollisionSimulator3D/: CollisionSimulator3D.h  CollisionSimulator3DBase.h  ContainerFactory3D.h  SimResultsCollSim3D.h
Code/mpl/Electromagnetism/: EMTensor.h  ElectricChargeDistributionSimulator.h  ElectricFields.h  LienardWiechertPotential.h  MagneticFields.h
Code/mpl/GeneralRelativity/: GRPathSimulator.h  SchwarzschildMetric.h
Code/mpl/Gravity/: NBodySimulator.h  TwoBodyCalculator.h  TwoBodySimulator.h  TwoBodySimulator2D.h
Code/mpl/Mechanics/: Carousel.h  Pendulums.h  Projectiles.h
Code/mpl/RigidBody/: MomentOfInertiaCalculator.h
Code/mpl/SpecialRelativity/: LorentzTransformation.h
Results/: body_rk4_0.txt  body_rk4_1.txt  body_rk4_2.txt  body_rk4_3.txt  body_rk4_4.txt  (+51 more)
(+6 files in other folders)
